@@ -80,6 +80,20 @@ stuff and such yourself.
 This extension will enable sending of the old error codes when generating a stanza
 error with for example the C<write_error_tag> method of L<Net::XMPP2::Writer>.
 
+=item XEP-0091 - Delayed Delivery
+=item XEP-0203 - Delayed Delivery
+
+Both delayed delivery XEPs are supported and are implemented by
+L<Net::XMPP2::IM::Delayed> which is a super class of L<Net::XMPP2::IM::Message>
+and L<Net::XMPP2::IM::Presence>.
+
+If you need to fetch delay from stanzas you caught yourself in an event you
+can use a L<Net::XMPP2::IM::Delayed> object to parse/fetch the delay out of the
+L<Net::XMPP2::Node>.
+
+Use the functions described above in the XEP-0082 item to decode the timestamps
+of delays.
+
 =item XEP-0114 - Jabber Component Protocol
 
 This extension allows you to connect to a server as a component
